--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ pandas==1.1.5
 plotly==4.4.1
 requests==2.23.0
 seaborn==0.11.2
-sklearn==0.22.2.post1
+scikit-learn==0.22.2.post1
 tensorflow==2.6.0
 wordcloud==1.5.0
